ixgbe: fix Tx timeouts with BQL (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14670,6 +14670,7 @@
 	patches.drivers/ixgbe-0040-ixgbe-Add-support-for-set_channels-ethtool-operation.patch
 	patches.drivers/ixgbe-0041-ixgbe-fix-possible-data-corruption-in-read_i2c_byte.patch
 	patches.drivers/ixgbe-0042-ixgbe-cleanup-error-checking-in-ixgbe_identify_sfp_m.patch
+	patches.drivers/ixgbe-0043-ixgbe-fix-Tx-timeouts-with-BQL.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
