--- a/series.conf
+++ b/series.conf
@@ -14633,6 +14633,7 @@
 	patches.drivers/ixgbe-0003-ixgbe-Make-TSO-check-for-CHECKSUM_PARTIAL-to-avoid-s.patch
 	patches.drivers/ixgbe-0004-ixgbe-Always-use-context-0-even-for-FCoE-and-TSO.patch
 	patches.drivers/ixgbe-0005-ixgbe-Update-ixgbe-Tx-flags-to-improve-code-efficien.patch
+	patches.drivers/ixgbe-0006-ixgbe-Improve-performance-and-reduce-size-of-ixgbe_t.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
