--- a/series.conf
+++ b/series.conf
@@ -14914,6 +14914,7 @@
 	patches.drivers/ixgbevf-0045-ixgbevf-fix-handling-of-tx-checksumming.patch
 	patches.drivers/ixgbevf-0046-ixgbevf-add-check-for-CHECKSUM_PARTIAL-when-doing-TS.patch
 	patches.drivers/ixgbevf-0047-ixgbevf-fix-skb-pkt_type-checks.patch
+	patches.drivers/ixgbevf-0048-ixgbevf-delete-unneeded-call-to-pci_set_power_state.patch
 
 	########################################################
 	# Wireless Networking
