--- a/series.conf
+++ b/series.conf
@@ -14685,6 +14685,7 @@
 	patches.drivers/ixgbe-0055-ixgbe-fix-MNG-FW-support-when-adapter-not-up.patch
 	patches.drivers/ixgbe-0056-ixgbe-Fix-1G-link-WoL.patch
 	patches.drivers/ixgbe-0057-ixgbe-bump-version-number.patch
+	patches.drivers/ixgbe-0058-ixgbe-Fix-a-bug-in-setting-VF-VLAN-via-PF.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
