--- a/series.conf
+++ b/series.conf
@@ -14705,6 +14705,7 @@
 	patches.drivers/ixgbe-0075-ixgbe-Use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_.patch
 	patches.drivers/ixgbe-0076-ixgbe-fix-fc-autoneg-ethtool-reporting.patch
 	patches.drivers/ixgbe-0077-ixgbe-add-new-media-type.patch
+	patches.drivers/ixgbe-0078-ixgbe-bump-version-number.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
