--- a/series.conf
+++ b/series.conf
@@ -14846,6 +14846,7 @@
 	patches.drivers/ixgbe-0216-ixgbe-Drop-Rx-alloc-at-end-of-Rx-cleanup.patch
 	patches.drivers/ixgbe-0217-ixgbe-remove-useless-bd_number-from-adapter-struct.patch
 	patches.drivers/ixgbe-0218-ixgbe-Do-not-schedule-an-uninitialized-workqueue-ent.patch
+	patches.drivers/ixgbe-0219-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
