--- a/series.conf
+++ b/series.conf
@@ -14698,6 +14698,7 @@
 	patches.drivers/ixgbe-0068-ixgbe-fix-register-access-during-ethtool-loopback-te.patch
 	patches.drivers/ixgbe-0069-ixgbe-cache-AUTOC-reads.patch
 	patches.drivers/ixgbe-0070-ixgbe-add-support-for-disabling-link-at-boot-time-on.patch
+	patches.drivers/ixgbe-0071-ixgbe-add-mac-type-to-the-version-in-ethtool_regs.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
