net: use SPEED_UNKNOWN and DUPLEX_UNKNOWN when appropriate (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14823,6 +14823,7 @@
 	patches.drivers/ixgbe-0193-ixgbe-separate-the-PTP-suspend-and-stop-actions.patch
 	patches.drivers/ixgbe-0194-ixgbe-avoid-duplicate-code-in-suspend-and-stop-paths.patch
 	patches.drivers/ixgbe-0195-ixgbe-fix-detection-of-SFP-capable-interfaces.patch
+	patches.drivers/ixgbe-0196-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
