--- a/series.conf
+++ b/series.conf
@@ -14814,6 +14814,7 @@
 	patches.drivers/ixgbe-0184-ixgbe-don-t-check-NULL-for-debugfs_remove_recursive.patch
 	patches.drivers/ixgbe-0185-ixgbe-add-space-between-operands-to.patch
 	patches.drivers/ixgbe-0186-ixgbe-add-fallthrough-comment-to-case-statements.patch
+	patches.drivers/ixgbe-0187-igb-ixgbe-remove-return-statements-for-void-function.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
