ixgbevf: introduce delay for checking VFLINKS on 82599 (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14933,6 +14933,7 @@
 	patches.drivers/ixgbevf-0064-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/ixgbevf-0065-ixgbevf-Remove-unused-get_supported_physical_layer-p.patch
 	patches.drivers/ixgbevf-0066-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/ixgbevf-0067-ixgbevf-introduce-delay-for-checking-VFLINKS-on-8259.patch
 
 	########################################################
 	# Wireless Networking
