PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14837,6 +14837,7 @@
 	patches.drivers/ixgbe-0207-ixgbe-Fix-ixgbe_write_mbx-error-result.patch
 	patches.drivers/ixgbe-0208-ixgbe-Delete-a-bunch-of-dead-code.patch
 	patches.drivers/ixgbe-0209-ixgbe-Make-return-values-more-direct.patch
+	patches.drivers/ixgbe-0210-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
