--- a/series.conf
+++ b/series.conf
@@ -14713,6 +14713,7 @@
 	patches.drivers/ixgbe-0083-ixgbe-call-pcie_get_mimimum_link-to-check-if-device-.patch
 	patches.drivers/ixgbe-0084-ixgbe-fix-lockdep-annotation-issue-for-ptp-s-work-it.patch
 	patches.drivers/ixgbe-0085-ixgbe-clear-semaphore-bits-on-timeouts.patch
+	patches.drivers/ixgbe-0086-ixgbe-add-support-for-quad-port-x520-adapter.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
