ixgbevf: Fix statistics corruption (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14870,6 +14870,7 @@
 	patches.drivers/ixgbevf-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/ixgbevf-0002-ixgbevf-Synch-out-of-tree-and-in-tree-mailbox-interr.patch
 	patches.drivers/ixgbevf-0003-ixgbevf-Fix-link-up-messages.patch
+	patches.drivers/ixgbevf-0004-ixgbevf-Fix-statistics-corruption.patch
 
 	########################################################
 	# Wireless Networking
