ixgbe: Fix Tx Hang issue with lldpad on 82598EB (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14700,6 +14700,7 @@
 	patches.drivers/ixgbe-0070-ixgbe-add-support-for-disabling-link-at-boot-time-on.patch
 	patches.drivers/ixgbe-0071-ixgbe-add-mac-type-to-the-version-in-ethtool_regs.patch
 	patches.drivers/ixgbe-0072-IXGBE-Set-the-SW-prio_tc-values-at-initialization-to.patch
+	patches.drivers/ixgbe-0073-ixgbe-Fix-Tx-Hang-issue-with-lldpad-on-82598EB.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
