--- a/series.conf
+++ b/series.conf
@@ -14833,6 +14833,7 @@
 	patches.drivers/ixgbe-0203-ixgbe-don-t-check-minimum-link-when-direct-assigned-.patch
 	patches.drivers/ixgbe-0204-ixgbe-Convert-some-udelays-to-usleep_range.patch
 	patches.drivers/ixgbe-0205-ixgbe-Fix-spurious-release-of-semaphore-in-EEPROM-ac.patch
+	patches.drivers/ixgbe-0206-ixgbe-Correct-X540-semaphore-error.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
