ixgbe: Fix incorrect logic for fixed fiber eeprom write (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14755,6 +14755,7 @@
 	patches.drivers/ixgbe-0125-ixgbe-Force-QDE-via-PFQDE-for-VFs-during-reset.patch
 	patches.drivers/ixgbe-0126-ixgbe-Clear-head-write-back-registers-on-VF-reset.patch
 	patches.drivers/ixgbe-0127-ixgbe-reinit_locked-should-be-called-with-rtnl_lock.patch
+	patches.drivers/ixgbe-0128-ixgbe-Fix-incorrect-logic-for-fixed-fiber-eeprom-wri.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
