--- a/series.conf
+++ b/series.conf
@@ -14671,6 +14671,7 @@
 	patches.drivers/ixgbe-0041-ixgbe-fix-possible-data-corruption-in-read_i2c_byte.patch
 	patches.drivers/ixgbe-0042-ixgbe-cleanup-error-checking-in-ixgbe_identify_sfp_m.patch
 	patches.drivers/ixgbe-0043-ixgbe-fix-Tx-timeouts-with-BQL.patch
+	patches.drivers/ixgbe-0044-ixgbe-Update-DESC_NEEDED-define-to-adjust-for-change.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
