ixgbevf: make the first tx_buffer a repository for most of the skb info (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14907,6 +14907,7 @@
 	patches.drivers/ixgbevf-0038-ixgbevf-move-ring-specific-stats-into-ring-specific-.patch
 	patches.drivers/ixgbevf-0039-ixgbevf-remove-counters-for-Tx-Rx-checksum-offload.patch
 	patches.drivers/ixgbevf-0040-ixgbevf-add-tx-counters.patch
+	patches.drivers/ixgbevf-0041-ixgbevf-make-the-first-tx_buffer-a-repository-for-mo.patch
 
 	########################################################
 	# Wireless Networking
