ixgbe: include QSFP PHY types in ixgbe_is_sfp() (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14721,6 +14721,7 @@
 	patches.drivers/ixgbe-0091-ixgbe-zero-out-mailbox-buffer-on-init.patch
 	patches.drivers/ixgbe-0092-ixgbe-cleanup-some-log-messages.patch
 	patches.drivers/ixgbe-0093-ixgbe-add-1Gbps-support-for-QSFP.patch
+	patches.drivers/ixgbe-0094-ixgbe-include-QSFP-PHY-types-in-ixgbe_is_sfp.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
