--- a/series.conf
+++ b/series.conf
@@ -14708,6 +14708,7 @@
 	patches.drivers/ixgbe-0078-ixgbe-bump-version-number.patch
 	patches.drivers/ixgbe-0079-ixgbe-fix-semaphore-lock-for-I2C-read-writes-on-8259.patch
 	patches.fixes/PCI-expose-pcie_link_speed-and-pcix_bus_speed-arrays.patch
+	patches.fixes/PCI-move-enum-pcie_link_width-into-pci.h.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
