--- a/series.conf
+++ b/series.conf
@@ -14715,6 +14715,7 @@
 	patches.drivers/ixgbe-0085-ixgbe-clear-semaphore-bits-on-timeouts.patch
 	patches.drivers/ixgbe-0086-ixgbe-add-support-for-quad-port-x520-adapter.patch
 	patches.drivers/ixgbe-0087-ixgbe-disable-link-when-adapter-goes-down.patch
+	patches.drivers/ixgbe-0088-ixgbe-Check-return-value-on-eeprom-reads.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
