ixgbe: show <2% for encoding loss on PCIe Gen3 (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14735,6 +14735,7 @@
 	patches.drivers/ixgbe-0105-ixgbe-cleanup-ixgbe_enumerate_functions.patch
 	patches.drivers/ixgbe-0106-ixgbe-use-pcie_capability_read_word-to-simplify-code.patch
 	patches.drivers/ixgbe-0107-ixgbe-fix-rx-usecs-range-checks-for-BQL.patch
+	patches.drivers/ixgbe-0108-ixgbe-show-2-for-encoding-loss-on-PCIe-Gen3.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
