ixgbe: Make use of the default fdb handlers (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14673,6 +14673,7 @@
 	patches.drivers/ixgbe-0043-ixgbe-fix-Tx-timeouts-with-BQL.patch
 	patches.drivers/ixgbe-0044-ixgbe-Update-DESC_NEEDED-define-to-adjust-for-change.patch
 	patches.fixes/net-generic-fdb-support-for-drivers-without-ndo_fdb_.patch
+	patches.drivers/ixgbe-0046-ixgbe-Make-use-of-the-default-fdb-handlers.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
