ixgbevf: remove 82599 from the module description (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14928,6 +14928,7 @@
 	patches.drivers/ixgbevf-0059-ixgbevf-Fix-rcu-warnings-induced-by-LER.patch
 	patches.drivers/ixgbevf-0060-ixgbevf-Add-bit-to-mark-work-queue-initialization.patch
 	patches.drivers/ixgbevf-0061-ixgbevf-remove-open-coded-skb_cow_head.patch
+	patches.drivers/ixgbevf-0062-ixgbevf-remove-82599-from-the-module-description.patch
 
 	########################################################
 	# Wireless Networking
