ixgbe: implement SIOCGHWTSTAMP ioctl (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14770,6 +14770,7 @@
 	patches.drivers/ixgbe-0140-ixgbe-Restore-hw_addr-in-LER-recovery-paths.patch
 	patches.drivers/ixgbe-0141-ixgbe-Fix-up-some-ethtool-results-when-adapter-is-re.patch
 	patches.drivers/ixgbe-0142-ixgbe-Check-config-reads-for-removal.patch
+	patches.drivers/ixgbe-0143-ixgbe-implement-SIOCGHWTSTAMP-ioctl.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
