--- a/series.conf
+++ b/series.conf
@@ -14727,6 +14727,7 @@
 	patches.drivers/ixgbe-0097-ixgbe-fix-ethtool-loopback-diagnostic-with-DCB-enabl.patch
 	patches.drivers/ixgbe-0098-ixgbe-limit-setting-speed-to-only-one-at-a-time-for-.patch
 	patches.drivers/ixgbe-0099-ixgbe-fix-ethtool-reporting-of-supported-links-for-S.patch
+	patches.drivers/ixgbe-0100-DMA-API-net-intel-ixgbe-fix-32-bit-DMA-mask-handling.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
