net:drivers/net: Miscellaneous conversions to ETH_ALEN (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14885,6 +14885,7 @@
 	patches.drivers/ixgbevf-0016-ixgbevf-cleanup-redundant-mailbox-read-failure-check.patch
 	patches.drivers/ixgbevf-0017-ixgbevf-add-wait-for-Rx-queue-disable.patch
 	patches.drivers/ixgbevf-0018-ixgbevf-move-API-neg-to-reset-path.patch
+	patches.drivers/ixgbevf-0019-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 
 	########################################################
 	# Wireless Networking
