ixgbevf: fix handling of tx checksumming (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14911,6 +14911,7 @@
 	patches.drivers/ixgbevf-0042-ixgbevf-redo-dma-mapping-using-the-tx-buffer-info.patch
 	patches.drivers/ixgbevf-0043-ixgbevf-merge-ixgbevf_tx_map-and-ixgbevf_tx_queue-in.patch
 	patches.drivers/ixgbevf-0044-ixgbevf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
+	patches.drivers/ixgbevf-0045-ixgbevf-fix-handling-of-tx-checksumming.patch
 
 	########################################################
 	# Wireless Networking
