--- a/series.conf
+++ b/series.conf
@@ -14891,6 +14891,7 @@
 	patches.drivers/ixgbevf-0022-ixgbevf-bump-driver-version.patch
 	patches.drivers/ixgbevf-0023-ixgbevf-add-ixgbevf_rx_skb.patch
 	patches.drivers/ixgbevf-0024-ixgbevf-have-clean_rx_irq-return-total_rx_packets-cl.patch
+	patches.drivers/ixgbevf-0025-ixgbevf-implement-CONFIG_NET_RX_BUSY_POLL.patch
 
 	########################################################
 	# Wireless Networking
