--- a/series.conf
+++ b/series.conf
@@ -14679,6 +14679,7 @@
 	patches.drivers/ixgbe-0049-ixgbe-Mask-off-check-of-frag_off-as-we-only-want-fra.patch
 	patches.drivers/ixgbe-0050-ixgbe-don-t-do-arithmetic-operations-on-bitmasks.patch
 	patches.drivers/ixgbe-0051-ixgbe-Drop-check-for-PAGE_SIZE-from-ixgbe_xmit_frame.patch
+	patches.drivers/ixgbe-0052-ixgbe-Enable-support-for-recognizing-PCI-e-Gen3-link.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
