ixgbe: Make ixgbe_identify_qsfp_module_generic static (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14741,6 +14741,7 @@
 	patches.drivers/ixgbe-0111-ixgbe-fix-inconsistent-clearing-of-the-multicast-tab.patch
 	patches.drivers/ixgbe-0112-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 	patches.drivers/ixgbe-0113-ixgbe-add-warning-when-max_vfs-is-out-of-range.patch
+	patches.drivers/ixgbe-0114-ixgbe-Make-ixgbe_identify_qsfp_module_generic-static.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
