ixgbevf: Convert uses of __constant_<foo> to <foo> (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14918,6 +14918,7 @@
 	patches.drivers/ixgbevf-0049-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/ixgbevf-0050-ixgbevf-Indicate-removal-state-explicitly.patch
 	patches.drivers/ixgbevf-0051-ixgbevf-Protect-ixgbevf_down-with-__IXGBEVF_DOWN-bit.patch
+	patches.drivers/ixgbevf-0052-ixgbevf-Convert-uses-of-__constant_-foo-to-foo.patch
 
 	########################################################
 	# Wireless Networking
