--- a/series.conf
+++ b/series.conf
@@ -14688,6 +14688,7 @@
 	patches.drivers/ixgbe-0058-ixgbe-Fix-a-bug-in-setting-VF-VLAN-via-PF.patch
 	patches.drivers/ixgbe-0059-ixgbe-in-shutdown-do-netif_running-under-rtnl_lock.patch
 	patches.drivers/ixgbe-0060-ixgbe-Add-support-for-WoL-on-82599-SFP-LOM.patch
+	patches.drivers/ixgbe-0061-ixgbe-Remove-unnecessary-ifdef-CONFIG_DEBUG_FS-tests.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
