PCI: expose pcie_link_speed and pcix_bus_speed arrays (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14707,6 +14707,7 @@
 	patches.drivers/ixgbe-0077-ixgbe-add-new-media-type.patch
 	patches.drivers/ixgbe-0078-ixgbe-bump-version-number.patch
 	patches.drivers/ixgbe-0079-ixgbe-fix-semaphore-lock-for-I2C-read-writes-on-8259.patch
+	patches.fixes/PCI-expose-pcie_link_speed-and-pcix_bus_speed-arrays.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
