--- a/series.conf
+++ b/series.conf
@@ -14746,6 +14746,7 @@
 	patches.drivers/ixgbe-0116-ixgbe-fix-for-unused-variable-warning-with-certain-c.patch
 	patches.drivers/ixgbe-0117-net-ixgbe-slight-optimization-of-addr-compare.patch
 	patches.drivers/ixgbe-0118-ixgbe-Indicate-removal-state-explicitly.patch
+	patches.drivers/ixgbe-0119-ixbge-Protect-ixgbe_down-with-__IXGBE_DOWN-bit.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
