ixgbe: separate the PTP suspend and stop actions (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14820,6 +14820,7 @@
 	patches.drivers/ixgbe-0190-ixgbe-extract-the-hardware-setup-from-the-ixgbe_ptp_.patch
 	patches.drivers/ixgbe-0191-ixgbe-allow-ixgbe_ptp_reset-to-maintain-current-hwts.patch
 	patches.drivers/ixgbe-0192-ixgbe-extract-PTP-clock-device-from-ptp_init.patch
+	patches.drivers/ixgbe-0193-ixgbe-separate-the-PTP-suspend-and-stop-actions.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
