--- a/series.conf
+++ b/series.conf
@@ -14824,6 +14824,7 @@
 	patches.drivers/ixgbe-0194-ixgbe-avoid-duplicate-code-in-suspend-and-stop-paths.patch
 	patches.drivers/ixgbe-0195-ixgbe-fix-detection-of-SFP-capable-interfaces.patch
 	patches.drivers/ixgbe-0196-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/ixgbe-0197-ixgbe-change-PTP-NSECS_PER_SEC-to-IXGBE_PTP_PPS_HALF.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
