ixgbe: change handling of multicast filters (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14803,6 +14803,7 @@
 	patches.drivers/ixgbe-0173-ixgbe-convert-low_water-into-an-array.patch
 	patches.drivers/ixgbe-0174-ixgbe-Use-out-of-line-function-for-register-reads.patch
 	patches.drivers/ixgbe-0175-ixgbe-remove-vlan_filter_disable-and-enable-function.patch
+	patches.drivers/ixgbe-0176-ixgbe-change-handling-of-multicast-filters.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
