ixgbe: refactor initialization of feature flags (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14659,6 +14659,7 @@
 	patches.drivers/ixgbe-0029-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 	patches.drivers/ixgbe-0030-ixgbe-fix-gso-type.patch
 	patches.drivers/ixgbe-0031-ixgbe-Only-set-gso_type-to-SKB_GSO_TCPV4-as-RSC-does.patch
+	patches.drivers/ixgbe-0032-ixgbe-refactor-initialization-of-feature-flags.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
