--- a/series.conf
+++ b/series.conf
@@ -14692,6 +14692,7 @@
 	patches.drivers/ixgbe-0062-ixgbe-fix-possible-divide-by-zero-in-ixgbe_update_it.patch
 	patches.drivers/ixgbe-0063-ixgbe-add-driver-support-for-x520-OCP-adapter.patch
 	patches.drivers/ixgbe-0064-ixgbe-rename-wol_supported-to-more-fitting-wol_enabl.patch
+	patches.drivers/ixgbe-0065-ixgbe-add-SFP-LX-module-support.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
