--- a/series.conf
+++ b/series.conf
@@ -14934,6 +14934,7 @@
 	patches.drivers/ixgbevf-0065-ixgbevf-Remove-unused-get_supported_physical_layer-p.patch
 	patches.drivers/ixgbevf-0066-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/ixgbevf-0067-ixgbevf-introduce-delay-for-checking-VFLINKS-on-8259.patch
+	patches.drivers/ixgbevf-0068-ixgbevf-Resolve-missing-field-initializers-warnings.patch
 
 	########################################################
 	# Wireless Networking
