ixgbevf: remove useless bd_number from struct ixgbevf_adapter (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14935,6 +14935,7 @@
 	patches.drivers/ixgbevf-0066-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/ixgbevf-0067-ixgbevf-introduce-delay-for-checking-VFLINKS-on-8259.patch
 	patches.drivers/ixgbevf-0068-ixgbevf-Resolve-missing-field-initializers-warnings.patch
+	patches.drivers/ixgbevf-0069-ixgbevf-remove-useless-bd_number-from-struct-ixgbevf.patch
 
 	########################################################
 	# Wireless Networking
