ixgbe: Implement PCI SR-IOV sysfs callback operation (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14643,6 +14643,7 @@
 	patches.drivers/ixgbe-0013-ixgbe-Inline-Rx-PTP-descriptor-handling.patch
 	patches.drivers/ixgbe-0014-ixgbe-Make-mailbox-ops-initialization-unconditional.patch
 	patches.drivers/ixgbe-0015-ixgbe-Modularize-SR-IOV-enablement-code.patch
+	patches.drivers/ixgbe-0016-ixgbe-Implement-PCI-SR-IOV-sysfs-callback-operation.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
