--- a/series.conf
+++ b/series.conf
@@ -14817,6 +14817,7 @@
 	patches.drivers/ixgbe-0187-igb-ixgbe-remove-return-statements-for-void-function.patch
 	patches.drivers/ixgbe-0188-ixgbe-fix-linking-at-100Mbps-on-copper-devices-with-.patch
 	patches.drivers/ixgbe-0189-ixgbe-rename-ixgbe_ptp_enable-to-ixgbe_ptp_feature_e.patch
+	patches.drivers/ixgbe-0190-ixgbe-extract-the-hardware-setup-from-the-ixgbe_ptp_.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
