ixgbe: check Core Clock Disable bit (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14782,6 +14782,7 @@
 	patches.drivers/ixgbe-0152-ixgbe-add-ixgbe_write_pci_cfg_word-with-ixgbe_remove.patch
 	patches.drivers/ixgbe-0153-ixgbe-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/ixgbe-0154-ixgbe-fix-errors-related-to-protected-AUTOC-calls.patch
+	patches.drivers/ixgbe-0155-ixgbe-check-Core-Clock-Disable-bit.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
