--- a/series.conf
+++ b/series.conf
@@ -14861,6 +14861,7 @@
 	patches.drivers/ixgbe-0231-ixgbe-check-for-vfs-outside-of-sriov_num_vfs-before-.patch
 	patches.drivers/ixgbe-0232-ixgbe-fix-race-when-setting-advertised-speed.patch
 	patches.drivers/ixgbe-0233-ixgbe-phy-fix-uninitialized-status-in-ixgbe_setup_ph.patch
+	patches.drivers/ixgbe-0234-ixgbe-Correctly-disable-VLAN-filter-in-promiscuous-m.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
