net: Validate IFLA_BRIDGE_MODE attribute length (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14863,6 +14863,7 @@
 	patches.drivers/ixgbe-0233-ixgbe-phy-fix-uninitialized-status-in-ixgbe_setup_ph.patch
 	patches.drivers/ixgbe-0234-ixgbe-Correctly-disable-VLAN-filter-in-promiscuous-m.patch
 	patches.drivers/ixgbe-0235-ixgbe-fix-use-after-free-adapter-state-test-in-ixgbe.patch
+	patches.drivers/ixgbe-0236-net-Validate-IFLA_BRIDGE_MODE-attribute-length.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
