ixgbe: Use static inlines instead of macros (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14747,6 +14747,7 @@
 	patches.drivers/ixgbe-0117-net-ixgbe-slight-optimization-of-addr-compare.patch
 	patches.drivers/ixgbe-0118-ixgbe-Indicate-removal-state-explicitly.patch
 	patches.drivers/ixgbe-0119-ixbge-Protect-ixgbe_down-with-__IXGBE_DOWN-bit.patch
+	patches.drivers/ixgbe-0120-ixgbe-Use-static-inlines-instead-of-macros.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
