--- a/series.conf
+++ b/series.conf
@@ -14752,6 +14752,7 @@
 	patches.drivers/ixgbe-0122-ixgbe-Check-register-reads-for-adapter-removal.patch
 	patches.drivers/ixgbe-0123-ixgbe-Check-for-adapter-removal-on-register-writes.patch
 	patches.drivers/ixgbe-0124-ixgbe-Additional-adapter-removal-checks.patch
+	patches.drivers/ixgbe-0125-ixgbe-Force-QDE-via-PFQDE-for-VFs-during-reset.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
