ixgbe: add driver support for x520 OCP adapter (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14690,6 +14690,7 @@
 	patches.drivers/ixgbe-0060-ixgbe-Add-support-for-WoL-on-82599-SFP-LOM.patch
 	patches.drivers/ixgbe-0061-ixgbe-Remove-unnecessary-ifdef-CONFIG_DEBUG_FS-tests.patch
 	patches.drivers/ixgbe-0062-ixgbe-fix-possible-divide-by-zero-in-ixgbe_update_it.patch
+	patches.drivers/ixgbe-0063-ixgbe-add-driver-support-for-x520-OCP-adapter.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
