ixgbevf: Adds function to set PSRTYPE register (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14886,6 +14886,7 @@
 	patches.drivers/ixgbevf-0017-ixgbevf-add-wait-for-Rx-queue-disable.patch
 	patches.drivers/ixgbevf-0018-ixgbevf-move-API-neg-to-reset-path.patch
 	patches.drivers/ixgbevf-0019-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
+	patches.drivers/ixgbevf-0020-ixgbevf-Adds-function-to-set-PSRTYPE-register.patch
 
 	########################################################
 	# Wireless Networking
