ixgbe: Convert uses of __constant_<foo> to <foo> (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14780,6 +14780,7 @@
 	patches.drivers/ixgbe-0150-net-Replace-u64_stats_fetch_begin_bh-to-u64_stats_fe.patch
 	patches.drivers/ixgbe-0151-ixgbe-Don-t-receive-packets-when-the-napi-budget-0.patch
 	patches.drivers/ixgbe-0152-ixgbe-add-ixgbe_write_pci_cfg_word-with-ixgbe_remove.patch
+	patches.drivers/ixgbe-0153-ixgbe-Convert-uses-of-__constant_-foo-to-foo.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
