--- a/series.conf
+++ b/series.conf
@@ -14790,6 +14790,7 @@
 	patches.drivers/ixgbe-0160-ixgbe-clean-up-ixgbe_atr_compute_perfect_hash_82599.patch
 	patches.drivers/ixgbe-0161-ixgbe-Stop-cacheing-if-the-MNG-FW-enabled.patch
 	patches.drivers/ixgbe-0162-ixgbe-enable-tx-queues-after-link-up.patch
+	patches.drivers/ixgbe-0163-ixgbe-Break-recursion-in-case-of-removal.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
