ixgbe: fix to use correct timeout interval for memory read completion (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14763,6 +14763,7 @@
 	patches.drivers/ixgbe-0133-ixgbe-modify-behavior-on-receiving-a-HW-ECC-error.patch
 	patches.drivers/ixgbe-0134-ixgbe-don-t-use-magic-size-number-to-assign-ptp_caps.patch
 	patches.drivers/ixgbe-0135-ixgbe-Add-WoL-support-for-a-new-device.patch
+	patches.drivers/ixgbe-0136-ixgbe-fix-to-use-correct-timeout-interval-for-memory.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
