ixgbe: bump version number (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14684,6 +14684,7 @@
 	patches.drivers/ixgbe-0054-ixgbe-enable-devices-with-internal-switch-to-read-pc.patch
 	patches.drivers/ixgbe-0055-ixgbe-fix-MNG-FW-support-when-adapter-not-up.patch
 	patches.drivers/ixgbe-0056-ixgbe-Fix-1G-link-WoL.patch
+	patches.drivers/ixgbe-0057-ixgbe-bump-version-number.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
