ixgbe: add missing supported filters to get_ts_info (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14635,6 +14635,7 @@
 	patches.drivers/ixgbe-0005-ixgbe-Update-ixgbe-Tx-flags-to-improve-code-efficien.patch
 	patches.drivers/ixgbe-0006-ixgbe-Improve-performance-and-reduce-size-of-ixgbe_t.patch
 	patches.drivers/ixgbe-0007-ixgbe-ethtool-ixgbe_diag_test-cleanup.patch
+	patches.drivers/ixgbe-0008-ixgbe-add-missing-supported-filters-to-get_ts_info.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
