ixgbe: check for vfs outside of sriov_num_vfs before dereference (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14858,6 +14858,7 @@
 	patches.drivers/ixgbe-0228-ixgbe-remove-wait-loop-on-autoneg-for-copper-devices.patch
 	patches.drivers/ixgbe-0229-ixgbe-fix-setting-of-TXDCTL.WTRHESH-when-ITR-is-set-.patch
 	patches.drivers/ixgbe-0230-ixgbe-fix-race-accessing-page-_count.patch
+	patches.drivers/ixgbe-0231-ixgbe-check-for-vfs-outside-of-sriov_num_vfs-before-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
