--- a/series.conf
+++ b/series.conf
@@ -14772,6 +14772,7 @@
 	patches.drivers/ixgbe-0142-ixgbe-Check-config-reads-for-removal.patch
 	patches.drivers/ixgbe-0143-ixgbe-implement-SIOCGHWTSTAMP-ioctl.patch
 	patches.drivers/ixgbe-0144-net-ixgbe-calls-skb_set_hash.patch
+	patches.drivers/ixgbe-0145-ixgbe-Fix-format-string-in-ixgbe_fcoe.c.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
