--- a/series.conf
+++ b/series.conf
@@ -14830,6 +14830,7 @@
 	patches.drivers/ixgbe-0200-ixgbe-Fix-possible-null-dereference-in-error-path.patch
 	patches.drivers/ixgbe-0201-ixgbe-Change-some-uses-of-strncpy-to-strlcpy.patch
 	patches.drivers/ixgbe-0202-ixgbe-fix-use-of-list_for_each-in-ixgbe_enumerate_fu.patch
+	patches.drivers/ixgbe-0203-ixgbe-don-t-check-minimum-link-when-direct-assigned-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
