ixgbe: Modularize SR-IOV enablement code (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14642,6 +14642,7 @@
 	patches.drivers/ixgbe-0012-ixgbe-add-warning-when-scheduling-reset.patch
 	patches.drivers/ixgbe-0013-ixgbe-Inline-Rx-PTP-descriptor-handling.patch
 	patches.drivers/ixgbe-0014-ixgbe-Make-mailbox-ops-initialization-unconditional.patch
+	patches.drivers/ixgbe-0015-ixgbe-Modularize-SR-IOV-enablement-code.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
