--- a/series.conf
+++ b/series.conf
@@ -14706,6 +14706,7 @@
 	patches.drivers/ixgbe-0076-ixgbe-fix-fc-autoneg-ethtool-reporting.patch
 	patches.drivers/ixgbe-0077-ixgbe-add-new-media-type.patch
 	patches.drivers/ixgbe-0078-ixgbe-bump-version-number.patch
+	patches.drivers/ixgbe-0079-ixgbe-fix-semaphore-lock-for-I2C-read-writes-on-8259.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
