drivers: net: Remove remaining alloc/OOM messages (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14656,6 +14656,7 @@
 	patches.drivers/ixgbe-0026-ixgbe-update-date-to-2013.patch
 	patches.drivers/ixgbe-0027-ixgbe-Replace-rmb-in-Tx-cleanup-with-read_barrier_de.patch
 	patches.drivers/ixgbe-0028-ixgbe-Fix-SR-IOV-MTU-warning.patch
+	patches.drivers/ixgbe-0029-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
