ixgbe: Always use context 0, even for FCoE and TSO (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14631,6 +14631,7 @@
 	patches.drivers/ixgbe-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/ixgbe-0002-ixgbe-SR-IOV-dynamic-IEEE-DCBx-default-priority-chan.patch
 	patches.drivers/ixgbe-0003-ixgbe-Make-TSO-check-for-CHECKSUM_PARTIAL-to-avoid-s.patch
+	patches.drivers/ixgbe-0004-ixgbe-Always-use-context-0-even-for-FCoE-and-TSO.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
