ixgbevf: Make the ethtool register test use accessors (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14920,6 +14920,7 @@
 	patches.drivers/ixgbevf-0051-ixgbevf-Protect-ixgbevf_down-with-__IXGBEVF_DOWN-bit.patch
 	patches.drivers/ixgbevf-0052-ixgbevf-Convert-uses-of-__constant_-foo-to-foo.patch
 	patches.drivers/ixgbevf-0053-ixgbevf-Use-static-inlines-instead-of-macros.patch
+	patches.drivers/ixgbevf-0054-ixgbevf-Make-the-ethtool-register-test-use-accessors.patch
 
 	########################################################
 	# Wireless Networking
