ixgbe: add comment noting recalculation of queues (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14841,6 +14841,7 @@
 	patches.drivers/ixgbe-0211-ixgbe-flush-when-in-xmit_more-mode-and-under-descrip.patch
 	patches.drivers/ixgbe-0212-ixgbe-Cleanup-FDB-handling-code.patch
 	patches.drivers/ixgbe-0213-ixgbe-reset-interface-on-link-loss-with-pending-Tx-w.patch
+	patches.drivers/ixgbe-0214-ixgbe-add-comment-noting-recalculation-of-queues.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
