--- a/series.conf
+++ b/series.conf
@@ -14702,6 +14702,7 @@
 	patches.drivers/ixgbe-0072-IXGBE-Set-the-SW-prio_tc-values-at-initialization-to.patch
 	patches.drivers/ixgbe-0073-ixgbe-Fix-Tx-Hang-issue-with-lldpad-on-82598EB.patch
 	patches.drivers/ixgbe-0074-ixgbe-Retain-VLAN-filtering-in-promiscuous-VT-mode.patch
+	patches.drivers/ixgbe-0075-ixgbe-Use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
