ixgbe: return integer from ixgbe_acquire_msix_vectors (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14847,6 +14847,7 @@
 	patches.drivers/ixgbe-0217-ixgbe-remove-useless-bd_number-from-adapter-struct.patch
 	patches.drivers/ixgbe-0218-ixgbe-Do-not-schedule-an-uninitialized-workqueue-ent.patch
 	patches.drivers/ixgbe-0219-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
+	patches.drivers/ixgbe-0220-ixgbe-return-integer-from-ixgbe_acquire_msix_vectors.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
