net: Explicitly initialize u64_stats_sync structures for lockdep (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14739,6 +14739,7 @@
 	patches.drivers/ixgbe-0109-ixgbe-remove-unnecessary-duplication-of-PCIe-bandwid.patch
 	patches.drivers/ixgbe-0110-ixgbe-Reduce-memory-consumption-with-larger-page-siz.patch
 	patches.drivers/ixgbe-0111-ixgbe-fix-inconsistent-clearing-of-the-multicast-tab.patch
+	patches.drivers/ixgbe-0112-net-Explicitly-initialize-u64_stats_sync-structures-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
