ixgbe: add new media type (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14704,6 +14704,7 @@
 	patches.drivers/ixgbe-0074-ixgbe-Retain-VLAN-filtering-in-promiscuous-VT-mode.patch
 	patches.drivers/ixgbe-0075-ixgbe-Use-pci_vfs_assigned-instead-of-ixgbe_vfs_are_.patch
 	patches.drivers/ixgbe-0076-ixgbe-fix-fc-autoneg-ethtool-reporting.patch
+	patches.drivers/ixgbe-0077-ixgbe-add-new-media-type.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
