--- a/series.conf
+++ b/series.conf
@@ -14644,6 +14644,7 @@
 	patches.drivers/ixgbe-0014-ixgbe-Make-mailbox-ops-initialization-unconditional.patch
 	patches.drivers/ixgbe-0015-ixgbe-Modularize-SR-IOV-enablement-code.patch
 	patches.drivers/ixgbe-0016-ixgbe-Implement-PCI-SR-IOV-sysfs-callback-operation.patch
+	patches.drivers/ixgbe-0017-ixgbe-Limit-number-of-reported-VFs-to-device-specifi.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
