ixgbevf: bump driver version (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14888,6 +14888,7 @@
 	patches.drivers/ixgbevf-0019-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/ixgbevf-0020-ixgbevf-Adds-function-to-set-PSRTYPE-register.patch
 	patches.drivers/ixgbevf-0021-ixgbevf-implement-ethtool-get-set-coalesce.patch
+	patches.drivers/ixgbevf-0022-ixgbevf-bump-driver-version.patch
 
 	########################################################
 	# Wireless Networking
