--- a/series.conf
+++ b/series.conf
@@ -14769,6 +14769,7 @@
 	patches.drivers/ixgbe-0139-ixgbe-Add-check-for-FW-veto-bit.patch
 	patches.drivers/ixgbe-0140-ixgbe-Restore-hw_addr-in-LER-recovery-paths.patch
 	patches.drivers/ixgbe-0141-ixgbe-Fix-up-some-ethtool-results-when-adapter-is-re.patch
+	patches.drivers/ixgbe-0142-ixgbe-Check-config-reads-for-removal.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
