ixgbevf: Remove unused get_supported_physical_layer pointer (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14931,6 +14931,7 @@
 	patches.drivers/ixgbevf-0062-ixgbevf-remove-82599-from-the-module-description.patch
 	patches.drivers/ixgbevf-0063-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/ixgbevf-0064-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
+	patches.drivers/ixgbevf-0065-ixgbevf-Remove-unused-get_supported_physical_layer-p.patch
 
 	########################################################
 	# Wireless Networking
