ixgbe: fix potential null dereference (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14651,6 +14651,7 @@
 	patches.drivers/ixgbe-0021-ixgbe-removed-unused-variable-from-setup_link_speed.patch
 	patches.drivers/ixgbe-0022-ixgbe-autoneg-variable-refactoring.patch
 	patches.drivers/ixgbe-0023-ixgbe-allow-reading-of-SFF-8472-data-over-i2c.patch
+	patches.drivers/ixgbe-0024-ixgbe-fix-potential-null-dereference.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
