ixgbevf: create function for all of ring init (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14901,6 +14901,7 @@
 	patches.drivers/ixgbevf-0032-ixgbevf-set-the-disable-state-when-ixgbevf_qv_disabl.patch
 	patches.drivers/ixgbevf-0033-ixgbevf-use-pci-drvdata-correctly-in-ixgbevf_suspend.patch
 	patches.drivers/ixgbevf-0034-ixgbevf-Convert-ring-storage-form-pointer-to-an-arra.patch
+	patches.drivers/ixgbevf-0035-ixgbevf-create-function-for-all-of-ring-init.patch
 
 	########################################################
 	# Wireless Networking
