ixgbe: Use out-of-line function for register reads (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14801,6 +14801,7 @@
 	patches.drivers/ixgbe-0171-ixgbe-clean-up-Rx-time-stamping-code.patch
 	patches.drivers/ixgbe-0172-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 	patches.drivers/ixgbe-0173-ixgbe-convert-low_water-into-an-array.patch
+	patches.drivers/ixgbe-0174-ixgbe-Use-out-of-line-function-for-register-reads.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
