--- a/series.conf
+++ b/series.conf
@@ -14647,6 +14647,7 @@
 	patches.drivers/ixgbe-0017-ixgbe-Limit-number-of-reported-VFs-to-device-specifi.patch
 	patches.drivers/ixgbe-0018-ixgbe-Reset-the-NIC-if-up2tc-has-changed.patch
 	patches.drivers/ixgbe-0019-ixgbe-Fix-device-ref-count-bug.patch
+	patches.drivers/ixgbe-0020-ixgbe-rename-autoneg-variables.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
