--- a/series.conf
+++ b/series.conf
@@ -14893,6 +14893,7 @@
 	patches.drivers/ixgbevf-0024-ixgbevf-have-clean_rx_irq-return-total_rx_packets-cl.patch
 	patches.drivers/ixgbevf-0025-ixgbevf-implement-CONFIG_NET_RX_BUSY_POLL.patch
 	patches.drivers/ixgbevf-0026-ixgbevf-add-BP_EXTENDED_STATS-for-CONFIG_NET_RX_BUSY.patch
+	patches.drivers/ixgbevf-0027-ixgbevf-Add-zero_base-handler-to-network-statistics.patch
 
 	########################################################
 	# Wireless Networking
