--- a/series.conf
+++ b/series.conf
@@ -14793,6 +14793,7 @@
 	patches.drivers/ixgbe-0163-ixgbe-Break-recursion-in-case-of-removal.patch
 	patches.drivers/ixgbe-0164-ixgbe-remove-redundant-if-clause-from-PTP-work.patch
 	patches.drivers/ixgbe-0165-ixgbe-never-generate-both-software-and-hardware-time.patch
+	patches.drivers/ixgbe-0166-ixgbe-fix-race-conditions-on-queuing-skb-for-HW-time.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
