--- a/series.conf
+++ b/series.conf
@@ -14897,6 +14897,7 @@
 	patches.drivers/ixgbevf-0028-ixgbevf-remove-redundant-workaround.patch
 	patches.drivers/ixgbevf-0029-ixgbe-cleanup-IXGBE_DESC_UNUSED.patch
 	patches.drivers/ixgbevf-0030-ixgbe-Focus-config-of-head-tail-ntc-and-ntu-all-into.patch
+	patches.drivers/ixgbevf-0031-ixgbevf-add-DCB-configuration-into-queue-setup.patch
 
 	########################################################
 	# Wireless Networking
