--- a/series.conf
+++ b/series.conf
@@ -14718,6 +14718,7 @@
 	patches.drivers/ixgbe-0088-ixgbe-Check-return-value-on-eeprom-reads.patch
 	patches.drivers/ixgbe-0089-ixgbe-fix-incorrect-limit-value-in-ring-transverse.patch
 	patches.drivers/ixgbe-0090-ixgbe-fix-link-test-when-connected-to-1Gbps-link-par.patch
+	patches.drivers/ixgbe-0091-ixgbe-zero-out-mailbox-buffer-on-init.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
