ixgbe: Add support for set_channels ethtool operation (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14667,6 +14667,7 @@
 	patches.drivers/ixgbe-0037-ixgbe-Update-ixgbe-driver-to-use-__netdev_pick_tx-in.patch
 	patches.drivers/ixgbe-0038-ixgbe-Make-ixgbe_setup_tc-usable-even-when-DCB-is-no.patch
 	patches.drivers/ixgbe-0039-ixgbe-Add-support-for-displaying-the-number-of-Tx-Rx.patch
+	patches.drivers/ixgbe-0040-ixgbe-Add-support-for-set_channels-ethtool-operation.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
