ixgbe: Indicate removal state explicitly (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14745,6 +14745,7 @@
 	patches.drivers/ixgbe-0115-ixgbe-Start-temperature-sensor-attribute-index-with-.patch
 	patches.drivers/ixgbe-0116-ixgbe-fix-for-unused-variable-warning-with-certain-c.patch
 	patches.drivers/ixgbe-0117-net-ixgbe-slight-optimization-of-addr-compare.patch
+	patches.drivers/ixgbe-0118-ixgbe-Indicate-removal-state-explicitly.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
