ixgbe: enable tx queues after link up (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14789,6 +14789,7 @@
 	patches.drivers/ixgbe-0159-ixgbe-use-ixgbe_read_pci_cfg_word.patch
 	patches.drivers/ixgbe-0160-ixgbe-clean-up-ixgbe_atr_compute_perfect_hash_82599.patch
 	patches.drivers/ixgbe-0161-ixgbe-Stop-cacheing-if-the-MNG-FW-enabled.patch
+	patches.drivers/ixgbe-0162-ixgbe-enable-tx-queues-after-link-up.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
