ixgbe: remove redundant if clause from PTP work (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14791,6 +14791,7 @@
 	patches.drivers/ixgbe-0161-ixgbe-Stop-cacheing-if-the-MNG-FW-enabled.patch
 	patches.drivers/ixgbe-0162-ixgbe-enable-tx-queues-after-link-up.patch
 	patches.drivers/ixgbe-0163-ixgbe-Break-recursion-in-case-of-removal.patch
+	patches.drivers/ixgbe-0164-ixgbe-remove-redundant-if-clause-from-PTP-work.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
