ixgbe: Additional adapter removal checks (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14751,6 +14751,7 @@
 	patches.drivers/ixgbe-0121-ixgbe-Make-ethtool-register-test-use-accessors.patch
 	patches.drivers/ixgbe-0122-ixgbe-Check-register-reads-for-adapter-removal.patch
 	patches.drivers/ixgbe-0123-ixgbe-Check-for-adapter-removal-on-register-writes.patch
+	patches.drivers/ixgbe-0124-ixgbe-Additional-adapter-removal-checks.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
