--- a/series.conf
+++ b/series.conf
@@ -14724,6 +14724,7 @@
 	patches.drivers/ixgbe-0094-ixgbe-include-QSFP-PHY-types-in-ixgbe_is_sfp.patch
 	patches.drivers/ixgbe-0095-ixgbe-add-support-for-older-QSFP-active-DA-cables.patch
 	patches.drivers/ixgbe-0096-ixgbe-fully-disable-hardware-RSC-logic-when-disablin.patch
+	patches.drivers/ixgbe-0097-ixgbe-fix-ethtool-loopback-diagnostic-with-DCB-enabl.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
