--- a/series.conf
+++ b/series.conf
@@ -14905,6 +14905,7 @@
 	patches.drivers/ixgbevf-0036-ixgbevf-bump-version.patch
 	patches.drivers/ixgbevf-0037-ixgbevf-make-use-of-the-dev-pointer-in-the-ixgbevf_r.patch
 	patches.drivers/ixgbevf-0038-ixgbevf-move-ring-specific-stats-into-ring-specific-.patch
+	patches.drivers/ixgbevf-0039-ixgbevf-remove-counters-for-Tx-Rx-checksum-offload.patch
 
 	########################################################
 	# Wireless Networking
