ixgbe: add support for disabling link at boot time on 82599 (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14697,6 +14697,7 @@
 	patches.drivers/ixgbe-0067-ixgbe-fix-EICR-write-in-ixgbe_msix_other.patch
 	patches.drivers/ixgbe-0068-ixgbe-fix-register-access-during-ethtool-loopback-te.patch
 	patches.drivers/ixgbe-0069-ixgbe-cache-AUTOC-reads.patch
+	patches.drivers/ixgbe-0070-ixgbe-add-support-for-disabling-link-at-boot-time-on.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
