ixgbevf: have clean_rx_irq return total_rx_packets cleaned (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14890,6 +14890,7 @@
 	patches.drivers/ixgbevf-0021-ixgbevf-implement-ethtool-get-set-coalesce.patch
 	patches.drivers/ixgbevf-0022-ixgbevf-bump-driver-version.patch
 	patches.drivers/ixgbevf-0023-ixgbevf-add-ixgbevf_rx_skb.patch
+	patches.drivers/ixgbevf-0024-ixgbevf-have-clean_rx_irq-return-total_rx_packets-cl.patch
 
 	########################################################
 	# Wireless Networking
