ixgbe: cleanup some log messages (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14719,6 +14719,7 @@
 	patches.drivers/ixgbe-0089-ixgbe-fix-incorrect-limit-value-in-ring-transverse.patch
 	patches.drivers/ixgbe-0090-ixgbe-fix-link-test-when-connected-to-1Gbps-link-par.patch
 	patches.drivers/ixgbe-0091-ixgbe-zero-out-mailbox-buffer-on-init.patch
+	patches.drivers/ixgbe-0092-ixgbe-cleanup-some-log-messages.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
