--- a/series.conf
+++ b/series.conf
@@ -14653,6 +14653,7 @@
 	patches.drivers/ixgbe-0023-ixgbe-allow-reading-of-SFF-8472-data-over-i2c.patch
 	patches.drivers/ixgbe-0024-ixgbe-fix-potential-null-dereference.patch
 	patches.drivers/ixgbe-0025-ixgbe-fix-return-values-and-memcpy-parameters-to-eli.patch
+	patches.drivers/ixgbe-0026-ixgbe-update-date-to-2013.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
