ixgbe: Define FCoE and Flow director limits much sooner to allow for changes (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14660,6 +14660,7 @@
 	patches.drivers/ixgbe-0030-ixgbe-fix-gso-type.patch
 	patches.drivers/ixgbe-0031-ixgbe-Only-set-gso_type-to-SKB_GSO_TCPV4-as-RSC-does.patch
 	patches.drivers/ixgbe-0032-ixgbe-refactor-initialization-of-feature-flags.patch
+	patches.drivers/ixgbe-0033-ixgbe-Define-FCoE-and-Flow-director-limits-much-soon.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
