--- a/series.conf
+++ b/series.conf
@@ -14694,6 +14694,7 @@
 	patches.drivers/ixgbe-0064-ixgbe-rename-wol_supported-to-more-fitting-wol_enabl.patch
 	patches.drivers/ixgbe-0065-ixgbe-add-SFP-LX-module-support.patch
 	patches.drivers/ixgbe-0066-ixgbe-add-WOL-support-for-new-subdevice-ID.patch
+	patches.drivers/ixgbe-0067-ixgbe-fix-EICR-write-in-ixgbe_msix_other.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
