--- a/series.conf
+++ b/series.conf
@@ -14648,6 +14648,7 @@
 	patches.drivers/ixgbe-0018-ixgbe-Reset-the-NIC-if-up2tc-has-changed.patch
 	patches.drivers/ixgbe-0019-ixgbe-Fix-device-ref-count-bug.patch
 	patches.drivers/ixgbe-0020-ixgbe-rename-autoneg-variables.patch
+	patches.drivers/ixgbe-0021-ixgbe-removed-unused-variable-from-setup_link_speed.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
