ixgbe: fix incorrect limit value in ring transverse (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14716,6 +14716,7 @@
 	patches.drivers/ixgbe-0086-ixgbe-add-support-for-quad-port-x520-adapter.patch
 	patches.drivers/ixgbe-0087-ixgbe-disable-link-when-adapter-goes-down.patch
 	patches.drivers/ixgbe-0088-ixgbe-Check-return-value-on-eeprom-reads.patch
+	patches.drivers/ixgbe-0089-ixgbe-fix-incorrect-limit-value-in-ring-transverse.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
