--- a/series.conf
+++ b/series.conf
@@ -14686,6 +14686,7 @@
 	patches.drivers/ixgbe-0056-ixgbe-Fix-1G-link-WoL.patch
 	patches.drivers/ixgbe-0057-ixgbe-bump-version-number.patch
 	patches.drivers/ixgbe-0058-ixgbe-Fix-a-bug-in-setting-VF-VLAN-via-PF.patch
+	patches.drivers/ixgbe-0059-ixgbe-in-shutdown-do-netif_running-under-rtnl_lock.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
