--- a/series.conf
+++ b/series.conf
@@ -14887,6 +14887,7 @@
 	patches.drivers/ixgbevf-0018-ixgbevf-move-API-neg-to-reset-path.patch
 	patches.drivers/ixgbevf-0019-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/ixgbevf-0020-ixgbevf-Adds-function-to-set-PSRTYPE-register.patch
+	patches.drivers/ixgbevf-0021-ixgbevf-implement-ethtool-get-set-coalesce.patch
 
 	########################################################
 	# Wireless Networking
