ixgbevf: Change ixgbe_read_reg to ixgbevf_read_reg (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14924,6 +14924,7 @@
 	patches.drivers/ixgbevf-0055-ixgbevf-Check-register-reads-for-adapter-removal.patch
 	patches.drivers/ixgbevf-0056-ixgbevf-Check-for-adapter-removal-on-register-writes.patch
 	patches.drivers/ixgbevf-0057-ixgbevf-Additional-adapter-removal-checks.patch
+	patches.drivers/ixgbevf-0058-ixgbevf-Change-ixgbe_read_reg-to-ixgbevf_read_reg.patch
 
 	########################################################
 	# Wireless Networking
