--- a/series.conf
+++ b/series.conf
@@ -14792,6 +14792,7 @@
 	patches.drivers/ixgbe-0162-ixgbe-enable-tx-queues-after-link-up.patch
 	patches.drivers/ixgbe-0163-ixgbe-Break-recursion-in-case-of-removal.patch
 	patches.drivers/ixgbe-0164-ixgbe-remove-redundant-if-clause-from-PTP-work.patch
+	patches.drivers/ixgbe-0165-ixgbe-never-generate-both-software-and-hardware-time.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
