ixgbe: Add WoL support for a new device (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14762,6 +14762,7 @@
 	patches.drivers/ixgbe-0132-ixgbe-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 	patches.drivers/ixgbe-0133-ixgbe-modify-behavior-on-receiving-a-HW-ECC-error.patch
 	patches.drivers/ixgbe-0134-ixgbe-don-t-use-magic-size-number-to-assign-ptp_caps.patch
+	patches.drivers/ixgbe-0135-ixgbe-Add-WoL-support-for-a-new-device.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
