ixgbe: add WOL support for new subdevice ID (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14693,6 +14693,7 @@
 	patches.drivers/ixgbe-0063-ixgbe-add-driver-support-for-x520-OCP-adapter.patch
 	patches.drivers/ixgbe-0064-ixgbe-rename-wol_supported-to-more-fitting-wol_enabl.patch
 	patches.drivers/ixgbe-0065-ixgbe-add-SFP-LX-module-support.patch
+	patches.drivers/ixgbe-0066-ixgbe-add-WOL-support-for-new-subdevice-ID.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
