ixgbe: Update ixgbe Tx flags to improve code efficiency (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14632,6 +14632,7 @@
 	patches.drivers/ixgbe-0002-ixgbe-SR-IOV-dynamic-IEEE-DCBx-default-priority-chan.patch
 	patches.drivers/ixgbe-0003-ixgbe-Make-TSO-check-for-CHECKSUM_PARTIAL-to-avoid-s.patch
 	patches.drivers/ixgbe-0004-ixgbe-Always-use-context-0-even-for-FCoE-and-TSO.patch
+	patches.drivers/ixgbe-0005-ixgbe-Update-ixgbe-Tx-flags-to-improve-code-efficien.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
