ixgbe: clean up checkpatch warnings about CODE_INDENT and LEADING_SPACE (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14806,6 +14806,7 @@
 	patches.drivers/ixgbe-0176-ixgbe-change-handling-of-multicast-filters.patch
 	patches.drivers/ixgbe-0177-ixgbe-improve-mac-filter-handling.patch
 	patches.drivers/ixgbe-0178-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/ixgbe-0179-ixgbe-clean-up-checkpatch-warnings-about-CODE_INDENT.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
