--- a/series.conf
+++ b/series.conf
@@ -14869,6 +14869,7 @@
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 	patches.drivers/ixgbevf-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/ixgbevf-0002-ixgbevf-Synch-out-of-tree-and-in-tree-mailbox-interr.patch
+	patches.drivers/ixgbevf-0003-ixgbevf-Fix-link-up-messages.patch
 
 	########################################################
 	# Wireless Networking
