--- a/series.conf
+++ b/series.conf
@@ -14658,6 +14658,7 @@
 	patches.drivers/ixgbe-0028-ixgbe-Fix-SR-IOV-MTU-warning.patch
 	patches.drivers/ixgbe-0029-drivers-net-Remove-remaining-alloc-OOM-messages.patch
 	patches.drivers/ixgbe-0030-ixgbe-fix-gso-type.patch
+	patches.drivers/ixgbe-0031-ixgbe-Only-set-gso_type-to-SKB_GSO_TCPV4-as-RSC-does.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
