--- a/series.conf
+++ b/series.conf
@@ -14848,6 +14848,7 @@
 	patches.drivers/ixgbe-0218-ixgbe-Do-not-schedule-an-uninitialized-workqueue-ent.patch
 	patches.drivers/ixgbe-0219-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
 	patches.drivers/ixgbe-0220-ixgbe-return-integer-from-ixgbe_acquire_msix_vectors.patch
+	patches.drivers/ixgbe-0221-ixgbe-move-msix_entries-allocation-into-ixgbe_acquir.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
