--- a/series.conf
+++ b/series.conf
@@ -14902,6 +14902,7 @@
 	patches.drivers/ixgbevf-0033-ixgbevf-use-pci-drvdata-correctly-in-ixgbevf_suspend.patch
 	patches.drivers/ixgbevf-0034-ixgbevf-Convert-ring-storage-form-pointer-to-an-arra.patch
 	patches.drivers/ixgbevf-0035-ixgbevf-create-function-for-all-of-ring-init.patch
+	patches.drivers/ixgbevf-0036-ixgbevf-bump-version.patch
 
 	########################################################
 	# Wireless Networking
