--- a/series.conf
+++ b/series.conf
@@ -14815,6 +14815,7 @@
 	patches.drivers/ixgbe-0185-ixgbe-add-space-between-operands-to.patch
 	patches.drivers/ixgbe-0186-ixgbe-add-fallthrough-comment-to-case-statements.patch
 	patches.drivers/ixgbe-0187-igb-ixgbe-remove-return-statements-for-void-function.patch
+	patches.drivers/ixgbe-0188-ixgbe-fix-linking-at-100Mbps-on-copper-devices-with-.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
