--- a/series.conf
+++ b/series.conf
@@ -14826,6 +14826,7 @@
 	patches.drivers/ixgbe-0196-net-use-SPEED_UNKNOWN-and-DUPLEX_UNKNOWN-when-approp.patch
 	patches.drivers/ixgbe-0197-ixgbe-change-PTP-NSECS_PER_SEC-to-IXGBE_PTP_PPS_HALF.patch
 	patches.drivers/ixgbe-0198-ixgbe-remove-unnecessary-break-after-goto.patch
+	patches.drivers/ixgbe-0199-ixgbe-remove-unnecessary-break-after-return.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
