--- a/series.conf
+++ b/series.conf
@@ -14641,6 +14641,7 @@
 	patches.drivers/ixgbe-0011-ixgbe-Add-ptp-work-item-to-poll-for-the-Tx-timestamp.patch
 	patches.drivers/ixgbe-0012-ixgbe-add-warning-when-scheduling-reset.patch
 	patches.drivers/ixgbe-0013-ixgbe-Inline-Rx-PTP-descriptor-handling.patch
+	patches.drivers/ixgbe-0014-ixgbe-Make-mailbox-ops-initialization-unconditional.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
