--- a/series.conf
+++ b/series.conf
@@ -14662,6 +14662,7 @@
 	patches.drivers/ixgbe-0032-ixgbe-refactor-initialization-of-feature-flags.patch
 	patches.drivers/ixgbe-0033-ixgbe-Define-FCoE-and-Flow-director-limits-much-soon.patch
 	patches.drivers/ixgbe-0034-ixgbe-Add-function-for-setting-XPS-queue-mapping.patch
+	patches.fixes/net-Split-core-bits-of-netdev_pick_tx-into-__netdev_.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
