--- a/series.conf
+++ b/series.conf
@@ -14627,6 +14627,11 @@
 	patches.drivers/0163-igb-fix-race-accessing-page-_count.patch
 	patches.drivers/0164-igb-Fixes-needed-for-surprise-removal-support.patch
 
+	# ixgbe SP4 update (bug#908398 FATE#317382)
+	patches.drivers/ixgbe-0001-remove-init-of-dev-perm_addr-in-drivers.patch
+
+	# ixgbevf SP4 update (bug#909488 FATE#317387)
+
 	########################################################
 	# Wireless Networking
 	########################################################
