--- a/series.conf
+++ b/series.conf
@@ -14799,6 +14799,7 @@
 	patches.drivers/ixgbe-0169-ixgbe-Add-bit-to-mark-service-task-initialization.patch
 	patches.drivers/ixgbe-0170-ixgbe-remove-open-coded-skb_cow_head.patch
 	patches.drivers/ixgbe-0171-ixgbe-clean-up-Rx-time-stamping-code.patch
+	patches.drivers/ixgbe-0172-e1000e-igb-ixgbe-i40e-fix-message-terminations.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
