--- a/series.conf
+++ b/series.conf
@@ -14765,6 +14765,7 @@
 	patches.drivers/ixgbe-0135-ixgbe-Add-WoL-support-for-a-new-device.patch
 	patches.drivers/ixgbe-0136-ixgbe-fix-to-use-correct-timeout-interval-for-memory.patch
 	patches.drivers/ixgbe-0137-ixgbe-collect-all-82599-AUTOC-code-in-one-function.patch
+	patches.drivers/ixgbe-0138-ixgbe-fix-bit-toggled-for-82599-reset-fix.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
