--- a/series.conf
+++ b/series.conf
@@ -14804,6 +14804,7 @@
 	patches.drivers/ixgbe-0174-ixgbe-Use-out-of-line-function-for-register-reads.patch
 	patches.drivers/ixgbe-0175-ixgbe-remove-vlan_filter_disable-and-enable-function.patch
 	patches.drivers/ixgbe-0176-ixgbe-change-handling-of-multicast-filters.patch
+	patches.drivers/ixgbe-0177-ixgbe-improve-mac-filter-handling.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
