ixgbe: Change some uses of strncpy to strlcpy (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14828,6 +14828,7 @@
 	patches.drivers/ixgbe-0198-ixgbe-remove-unnecessary-break-after-goto.patch
 	patches.drivers/ixgbe-0199-ixgbe-remove-unnecessary-break-after-return.patch
 	patches.drivers/ixgbe-0200-ixgbe-Fix-possible-null-dereference-in-error-path.patch
+	patches.drivers/ixgbe-0201-ixgbe-Change-some-uses-of-strncpy-to-strlcpy.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
