--- a/series.conf
+++ b/series.conf
@@ -14630,6 +14630,7 @@
 	# ixgbe SP4 update (bug#908398 FATE#317382)
 	patches.drivers/ixgbe-0001-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/ixgbe-0002-ixgbe-SR-IOV-dynamic-IEEE-DCBx-default-priority-chan.patch
+	patches.drivers/ixgbe-0003-ixgbe-Make-TSO-check-for-CHECKSUM_PARTIAL-to-avoid-s.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
