ixgbevf: use PCI_DEVICE_TABLE macro (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14874,6 +14874,7 @@
 	patches.drivers/ixgbevf-0005-ixgbevf-Fix-link-speed-message-to-support-100Mbps.patch
 	patches.drivers/ixgbevf-0006-ixgbevf-Make-sure-link-status-and-speed-are-fetched.patch
 	patches.drivers/ixgbevf-0007-ixgbevf-Make-next_to_watch-a-pointer-and-adjust-memo.patch
+	patches.drivers/ixgbevf-0008-ixgbevf-use-PCI_DEVICE_TABLE-macro.patch
 
 	########################################################
 	# Wireless Networking
