--- a/series.conf
+++ b/series.conf
@@ -14654,6 +14654,7 @@
 	patches.drivers/ixgbe-0024-ixgbe-fix-potential-null-dereference.patch
 	patches.drivers/ixgbe-0025-ixgbe-fix-return-values-and-memcpy-parameters-to-eli.patch
 	patches.drivers/ixgbe-0026-ixgbe-update-date-to-2013.patch
+	patches.drivers/ixgbe-0027-ixgbe-Replace-rmb-in-Tx-cleanup-with-read_barrier_de.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
