--- a/series.conf
+++ b/series.conf
@@ -14734,6 +14734,7 @@
 	patches.drivers/ixgbe-0104-net-drivers-net-Miscellaneous-conversions-to-ETH_ALE.patch
 	patches.drivers/ixgbe-0105-ixgbe-cleanup-ixgbe_enumerate_functions.patch
 	patches.drivers/ixgbe-0106-ixgbe-use-pcie_capability_read_word-to-simplify-code.patch
+	patches.drivers/ixgbe-0107-ixgbe-fix-rx-usecs-range-checks-for-BQL.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
