--- a/series.conf
+++ b/series.conf
@@ -14646,6 +14646,7 @@
 	patches.drivers/ixgbe-0016-ixgbe-Implement-PCI-SR-IOV-sysfs-callback-operation.patch
 	patches.drivers/ixgbe-0017-ixgbe-Limit-number-of-reported-VFs-to-device-specifi.patch
 	patches.drivers/ixgbe-0018-ixgbe-Reset-the-NIC-if-up2tc-has-changed.patch
+	patches.drivers/ixgbe-0019-ixgbe-Fix-device-ref-count-bug.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
