--- a/series.conf
+++ b/series.conf
@@ -14873,6 +14873,7 @@
 	patches.drivers/ixgbevf-0004-ixgbevf-Fix-statistics-corruption.patch
 	patches.drivers/ixgbevf-0005-ixgbevf-Fix-link-speed-message-to-support-100Mbps.patch
 	patches.drivers/ixgbevf-0006-ixgbevf-Make-sure-link-status-and-speed-are-fetched.patch
+	patches.drivers/ixgbevf-0007-ixgbevf-Make-next_to_watch-a-pointer-and-adjust-memo.patch
 
 	########################################################
 	# Wireless Networking
