ixgbe: modify behavior on receiving a HW ECC error (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14760,6 +14760,7 @@
 	patches.drivers/ixgbe-0130-ixgbe-set-driver_max_VFs-should-be-done-before-enabl.patch
 	patches.drivers/ixgbe-0131-ixgbe-bump-version-number.patch
 	patches.drivers/ixgbe-0132-ixgbe-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
+	patches.drivers/ixgbe-0133-ixgbe-modify-behavior-on-receiving-a-HW-ECC-error.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
