ixgbevf: move API neg to reset path (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14884,6 +14884,7 @@
 	patches.drivers/ixgbevf-0015-ixgbevf-do-not-print-registers-to-dmesg-in-ixgbevf_g.patch
 	patches.drivers/ixgbevf-0016-ixgbevf-cleanup-redundant-mailbox-read-failure-check.patch
 	patches.drivers/ixgbevf-0017-ixgbevf-add-wait-for-Rx-queue-disable.patch
+	patches.drivers/ixgbevf-0018-ixgbevf-move-API-neg-to-reset-path.patch
 
 	########################################################
 	# Wireless Networking
