--- a/series.conf
+++ b/series.conf
@@ -14787,6 +14787,7 @@
 	patches.drivers/ixgbe-0157-ixgbe-fix-ixgbe_setup_mac_link_82599-autoc-variables.patch
 	patches.drivers/ixgbe-0158-ixgbe-remove-unused-media-type.patch
 	patches.drivers/ixgbe-0159-ixgbe-use-ixgbe_read_pci_cfg_word.patch
+	patches.drivers/ixgbe-0160-ixgbe-clean-up-ixgbe_atr_compute_perfect_hash_82599.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
