ixgbe: add warnings for other disabled features without MSI-X support (bug#908398 FATE#317382).

--- a/series.conf
+++ b/series.conf
@@ -14852,6 +14852,7 @@
 	patches.drivers/ixgbe-0222-ixgbe-determine-vector-count-inside-ixgbe_acquire_ms.patch
 	patches.drivers/ixgbe-0223-ixgbe-use-e_dev_warn-instead-of-e_err-for-displaying.patch
 	patches.drivers/ixgbe-0224-ixgbe-use-e_dev_warn-instead-of-netif_printk.patch
+	patches.drivers/ixgbe-0225-ixgbe-add-warnings-for-other-disabled-features-witho.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
