ixgbevf: merge ixgbevf_tx_map and ixgbevf_tx_queue into a single function (bug#909488 FATE#317387).

--- a/series.conf
+++ b/series.conf
@@ -14909,6 +14909,7 @@
 	patches.drivers/ixgbevf-0040-ixgbevf-add-tx-counters.patch
 	patches.drivers/ixgbevf-0041-ixgbevf-make-the-first-tx_buffer-a-repository-for-mo.patch
 	patches.drivers/ixgbevf-0042-ixgbevf-redo-dma-mapping-using-the-tx-buffer-info.patch
+	patches.drivers/ixgbevf-0043-ixgbevf-merge-ixgbevf_tx_map-and-ixgbevf_tx_queue-in.patch
 
 	########################################################
 	# Wireless Networking
