--- a/series.conf
+++ b/series.conf
@@ -14771,6 +14771,7 @@
 	patches.drivers/ixgbe-0141-ixgbe-Fix-up-some-ethtool-results-when-adapter-is-re.patch
 	patches.drivers/ixgbe-0142-ixgbe-Check-config-reads-for-removal.patch
 	patches.drivers/ixgbe-0143-ixgbe-implement-SIOCGHWTSTAMP-ioctl.patch
+	patches.drivers/ixgbe-0144-net-ixgbe-calls-skb_set_hash.patch
 
 	# ixgbevf SP4 update (bug#909488 FATE#317387)
 
